# glue-mcp

./: Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml  rust.yml
src/: lib.rs  main.rs  util.rs
