[package]
name = "glue-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-sdk-glue = "1.90.0"
axum = { version = "0.8.3", features = ["macros"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-sse-server"] }
tracing-log = "0.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "1.6.2"
tokio-util = "0.7.15"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
metrics-util = "0.19.1"

[dev-dependencies]
ollama-rs = "0.3.0"
